add_subdirectory(00_cmake)
add_subdirectory(01_swap)
add_subdirectory(02_random)
add_subdirectory(03_operators)
add_subdirectory(04_rule_of_three)
add_subdirectory(05_inheritance)
add_subdirectory(06_exceptions)
add_subdirectory(07_templates)
add_subdirectory(08_file_io)
add_subdirectory(09_smart_pointer)
add_subdirectory(10_time)
add_subdirectory(11_cin_handling_invalid_input)
add_subdirectory(12_templates_stl)
add_subdirectory(13_templates_concept)
add_subdirectory(14_dynamic_and_dynamic_polymorphism)
